[FIX] point_of_sale: fix zoom
When the user zooms with the browser, the bottom left pads are
misaligned for some zoom levels.

By slightly reducing the width of the action pad, this can be solved for
all acceptable zoom levels.

opw-745074

--- a/addons/point_of_sale/static/src/css/pos.css
+++ b/addons/point_of_sale/static/src/css/pos.css
@@ -629,7 +629,7 @@ td {
     margin-right: 0;
     text-align: center;
     vertical-align: top;
-    width: 188px;
+    width: 186px;
     border: none;
     border-radius: 0;
     border-top: 1px solid;
